--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>My Page</title>
 </head>
 <body>
-    Hello, world!
+    Hello, world! I think windows credentials is working.
 </body>
 </html>
